src/y.output
   0  $accept : end $end

   1  end : _end
   2      | end _end

   3  _end : scalar_decl
   4       | array_decl
   5       | func_decl
   6       | func_def

   7  compound_stmt_func : '{' '}'

   8  $$1 :

   9  $$2 :

  10  compound_stmt_func : '{' $$1 stmts $$2 '}'

  11  compound_stmt : '{' '}'
  12                | '{' stmts '}'

  13  stmts : _stmt
  14        | stmts _stmt

  15  _stmt : stmt
  16        | var_decl

  17  $$3 :

  18  $$4 :

  19  $$5 :

  20  for_stmt : FOR '(' expr ';' $$3 expr ';' $$4 expr ')' $$5 compound_stmt

  21  $$6 :

  22  $$7 :

  23  while_stmt : WHILE '(' $$6 expr $$7 ')' compound_stmt

  24  $$8 :

  25  $$9 :

  26  while_stmt : DO $$8 compound_stmt WHILE '(' expr $$9 ')' ';'

  27  switch_stmt : SWITCH '(' expr ')' '{' switch_clauses '}'
  28              | SWITCH '(' expr ')' '{' '}'

  29  if_stmt : _if_stmt
  30          | _if_stmt ELSE compound_stmt

  31  $$10 :

  32  _if_stmt : IF '(' expr ')' $$10 compound_stmt

  33  switch_clauses : switch_clause
  34                 | switch_clauses switch_clause

  35  switch_clause : CASE expr ':'
  36                | CASE expr ':' stmts
  37                | DEFAULT ':'
  38                | DEFAULT ':' stmts

  39  stmt : compound_stmt
  40       | for_stmt
  41       | while_stmt
  42       | switch_stmt
  43       | if_stmt
  44       | RETURN ';'
  45       | RETURN expr ';'
  46       | BREAK ';'
  47       | CONTINUE ';'
  48       | expr ';'

  49  var_decl : scalar_decl
  50           | array_decl
  51           | func_decl

  52  $$11 :

  53  func_def : type ident '(' params ')' $$11 compound_stmt_func

  54  func_decl : type ident '(' params ')' ';'

  55  scalar_decl : type idents ';'

  56  array_decl : type array ';'

  57  idents : idents ',' _ident
  58         | _ident

  59  _ident : ident
  60         | ident '=' expr

  61  array : ident '[' INT ']'

  62  params :
  63         | _params

  64  _params : param
  65          | _params ',' param

  66  param : type ID
  67        | type '*' ID

  68  ident : ID
  69        | '*' ID

  70  type : type1
  71       | CONST type1
  72       | CONST

  73  type1 : type0
  74        | SIGNED_OR_NOT type0
  75        | SIGNED_OR_NOT
  76        | KEY_OTHER_TYPE

  77  type0 : KEY_INT
  78        | LONG_OR_SHORT KEY_INT
  79        | LONG_OR_SHORT
  80        | KEY_CHAR

  81  expr : _expr
  82       | expr '+' expr
  83       | expr '-' expr
  84       | expr '*' expr
  85       | expr '/' expr
  86       | expr '%' expr
  87       | expr '<' expr
  88       | expr '>' expr
  89       | expr NLT expr
  90       | expr NMT expr
  91       | expr EQ expr
  92       | expr NEQ expr
  93       | expr AND expr
  94       | expr OR expr
  95       | expr '^' expr
  96       | expr '&' expr
  97       | expr '|' expr
  98       | expr LS expr
  99       | expr RS expr
 100       | ID '=' expr
 101       | '*' factor '=' expr
 102       | ID '[' expr ']' '=' expr

 103  _expr : factor
 104        | INC _expr
 105        | DEC _expr
 106        | '+' _expr
 107        | '-' _expr
 108        | '!' _expr
 109        | '~' _expr
 110        | '*' _expr
 111        | '&' _expr
 112        | '(' type ')' _expr

 113  factor : ID
 114         | ID INC
 115         | ID DEC
 116         | '(' expr ')'
 117         | array_subsc
 118         | INT
 119         | FLOAT
 120         | CHAR
 121         | STRING
 122         | ID '(' ')'
 123         | ID '(' call_params ')'
 124         | NUL
 125         | DIGITAL_WRITE '(' expr ',' HIGH_LOW ')'
 126         | DELAY '(' expr ')'

 127  call_params : expr
 128              | call_params ',' expr

 129  array_subsc : ID '[' expr ']'

state 0
	$accept : . end $end  (0)

	CONST  shift 1
	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	.  error

	end  goto 7
	_end  goto 8
	func_def  goto 9
	func_decl  goto 10
	scalar_decl  goto 11
	array_decl  goto 12
	type  goto 13
	type1  goto 14
	type0  goto 15


state 1
	type : CONST . type1  (71)
	type : CONST .  (72)

	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	ID  reduce 72
	')'  reduce 72
	'*'  reduce 72

	type1  goto 16
	type0  goto 15


state 2
	type1 : SIGNED_OR_NOT . type0  (74)
	type1 : SIGNED_OR_NOT .  (75)

	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	ID  reduce 75
	')'  reduce 75
	'*'  reduce 75

	type0  goto 17


state 3
	type0 : LONG_OR_SHORT . KEY_INT  (78)
	type0 : LONG_OR_SHORT .  (79)

	KEY_INT  shift 18
	ID  reduce 79
	')'  reduce 79
	'*'  reduce 79


state 4
	type0 : KEY_INT .  (77)

	.  reduce 77


state 5
	type0 : KEY_CHAR .  (80)

	.  reduce 80


state 6
	type1 : KEY_OTHER_TYPE .  (76)

	.  reduce 76


state 7
	$accept : end . $end  (0)
	end : end . _end  (2)

	$end  accept
	CONST  shift 1
	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	.  error

	_end  goto 19
	func_def  goto 9
	func_decl  goto 10
	scalar_decl  goto 11
	array_decl  goto 12
	type  goto 13
	type1  goto 14
	type0  goto 15


state 8
	end : _end .  (1)

	.  reduce 1


state 9
	_end : func_def .  (6)

	.  reduce 6


state 10
	_end : func_decl .  (5)

	.  reduce 5


state 11
	_end : scalar_decl .  (3)

	.  reduce 3


state 12
	_end : array_decl .  (4)

	.  reduce 4


state 13
	func_def : type . ident '(' params ')' $$11 compound_stmt_func  (53)
	func_decl : type . ident '(' params ')' ';'  (54)
	scalar_decl : type . idents ';'  (55)
	array_decl : type . array ';'  (56)

	ID  shift 20
	'*'  shift 21
	.  error

	idents  goto 22
	_ident  goto 23
	array  goto 24
	ident  goto 25


state 14
	type : type1 .  (70)

	.  reduce 70


state 15
	type1 : type0 .  (73)

	.  reduce 73


state 16
	type : CONST type1 .  (71)

	.  reduce 71


state 17
	type1 : SIGNED_OR_NOT type0 .  (74)

	.  reduce 74


state 18
	type0 : LONG_OR_SHORT KEY_INT .  (78)

	.  reduce 78


state 19
	end : end _end .  (2)

	.  reduce 2


state 20
	ident : ID .  (68)

	.  reduce 68


state 21
	ident : '*' . ID  (69)

	ID  shift 26
	.  error


state 22
	scalar_decl : type idents . ';'  (55)
	idents : idents . ',' _ident  (57)

	','  shift 27
	';'  shift 28
	.  error


state 23
	idents : _ident .  (58)

	.  reduce 58


state 24
	array_decl : type array . ';'  (56)

	';'  shift 29
	.  error


state 25
	func_def : type ident . '(' params ')' $$11 compound_stmt_func  (53)
	func_decl : type ident . '(' params ')' ';'  (54)
	_ident : ident .  (59)
	_ident : ident . '=' expr  (60)
	array : ident . '[' INT ']'  (61)

	'('  shift 30
	'['  shift 31
	'='  shift 32
	','  reduce 59
	';'  reduce 59


state 26
	ident : '*' ID .  (69)

	.  reduce 69


state 27
	idents : idents ',' . _ident  (57)

	ID  shift 20
	'*'  shift 21
	.  error

	_ident  goto 33
	ident  goto 34


state 28
	scalar_decl : type idents ';' .  (55)

	.  reduce 55


state 29
	array_decl : type array ';' .  (56)

	.  reduce 56


state 30
	func_def : type ident '(' . params ')' $$11 compound_stmt_func  (53)
	func_decl : type ident '(' . params ')' ';'  (54)
	params : .  (62)

	CONST  shift 1
	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	')'  reduce 62

	param  goto 35
	_params  goto 36
	params  goto 37
	type  goto 38
	type1  goto 14
	type0  goto 15


state 31
	array : ident '[' . INT ']'  (61)

	INT  shift 39
	.  error


state 32
	_ident : ident '=' . expr  (60)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 57
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 33
	idents : idents ',' _ident .  (57)

	.  reduce 57


state 34
	_ident : ident .  (59)
	_ident : ident . '=' expr  (60)

	'='  shift 32
	','  reduce 59
	';'  reduce 59


state 35
	_params : param .  (64)

	.  reduce 64


state 36
	params : _params .  (63)
	_params : _params . ',' param  (65)

	','  shift 61
	')'  reduce 63


state 37
	func_def : type ident '(' params . ')' $$11 compound_stmt_func  (53)
	func_decl : type ident '(' params . ')' ';'  (54)

	')'  shift 62
	.  error


state 38
	param : type . ID  (66)
	param : type . '*' ID  (67)

	ID  shift 63
	'*'  shift 64
	.  error


state 39
	array : ident '[' INT . ']'  (61)

	']'  shift 65
	.  error


state 40
	factor : NUL .  (124)

	.  reduce 124


state 41
	expr : ID . '=' expr  (100)
	expr : ID . '[' expr ']' '=' expr  (102)
	factor : ID .  (113)
	factor : ID . INC  (114)
	factor : ID . DEC  (115)
	factor : ID . '(' ')'  (122)
	factor : ID . '(' call_params ')'  (123)
	array_subsc : ID . '[' expr ']'  (129)

	'('  shift 66
	'['  shift 67
	'='  shift 68
	INC  shift 69
	DEC  shift 70
	','  reduce 113
	')'  reduce 113
	':'  reduce 113
	';'  reduce 113
	']'  reduce 113
	OR  reduce 113
	AND  reduce 113
	'|'  reduce 113
	'^'  reduce 113
	'&'  reduce 113
	EQ  reduce 113
	NEQ  reduce 113
	NLT  reduce 113
	NMT  reduce 113
	'<'  reduce 113
	'>'  reduce 113
	LS  reduce 113
	RS  reduce 113
	'+'  reduce 113
	'-'  reduce 113
	'*'  reduce 113
	'/'  reduce 113
	'%'  reduce 113


state 42
	factor : STRING .  (121)

	.  reduce 121


state 43
	factor : CHAR .  (120)

	.  reduce 120


state 44
	factor : DIGITAL_WRITE . '(' expr ',' HIGH_LOW ')'  (125)

	'('  shift 71
	.  error


state 45
	factor : DELAY . '(' expr ')'  (126)

	'('  shift 72
	.  error


state 46
	factor : INT .  (118)

	.  reduce 118


state 47
	factor : FLOAT .  (119)

	.  reduce 119


state 48
	_expr : '(' . type ')' _expr  (112)
	factor : '(' . expr ')'  (116)

	NUL  shift 40
	CONST  shift 1
	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	type  goto 73
	type1  goto 14
	type0  goto 15
	expr  goto 74
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 49
	_expr : '&' . _expr  (111)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 77
	array_subsc  goto 60


state 50
	_expr : '+' . _expr  (106)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 78
	array_subsc  goto 60


state 51
	_expr : '-' . _expr  (107)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 79
	array_subsc  goto 60


state 52
	expr : '*' . factor '=' expr  (101)
	_expr : '*' . _expr  (110)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 80
	_expr  goto 81
	array_subsc  goto 60


state 53
	_expr : INC . _expr  (104)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 82
	array_subsc  goto 60


state 54
	_expr : DEC . _expr  (105)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 83
	array_subsc  goto 60


state 55
	_expr : '!' . _expr  (108)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 84
	array_subsc  goto 60


state 56
	_expr : '~' . _expr  (109)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 85
	array_subsc  goto 60


state 57
	_ident : ident '=' expr .  (60)
	expr : expr . '+' expr  (82)
	expr : expr . '-' expr  (83)
	expr : expr . '*' expr  (84)
	expr : expr . '/' expr  (85)
	expr : expr . '%' expr  (86)
	expr : expr . '<' expr  (87)
	expr : expr . '>' expr  (88)
	expr : expr . NLT expr  (89)
	expr : expr . NMT expr  (90)
	expr : expr . EQ expr  (91)
	expr : expr . NEQ expr  (92)
	expr : expr . AND expr  (93)
	expr : expr . OR expr  (94)
	expr : expr . '^' expr  (95)
	expr : expr . '&' expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . LS expr  (98)
	expr : expr . RS expr  (99)

	OR  shift 86
	AND  shift 87
	'|'  shift 88
	'^'  shift 89
	'&'  shift 90
	EQ  shift 91
	NEQ  shift 92
	NLT  shift 93
	NMT  shift 94
	'<'  shift 95
	'>'  shift 96
	LS  shift 97
	RS  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	','  reduce 60
	';'  reduce 60


state 58
	_expr : factor .  (103)

	.  reduce 103


state 59
	expr : _expr .  (81)

	.  reduce 81


state 60
	factor : array_subsc .  (117)

	.  reduce 117


state 61
	_params : _params ',' . param  (65)

	CONST  shift 1
	SIGNED_OR_NOT  shift 2
	LONG_OR_SHORT  shift 3
	KEY_INT  shift 4
	KEY_CHAR  shift 5
	KEY_OTHER_TYPE  shift 6
	.  error

	param  goto 104
	type  goto 38
	type1  goto 14
	type0  goto 15


state 62
	func_def : type ident '(' params ')' . $$11 compound_stmt_func  (53)
	func_decl : type ident '(' params ')' . ';'  (54)
	$$11 : .  (52)

	';'  shift 105
	'{'  reduce 52

	$$11  goto 106


state 63
	param : type ID .  (66)

	.  reduce 66


state 64
	param : type '*' . ID  (67)

	ID  shift 107
	.  error


state 65
	array : ident '[' INT ']' .  (61)

	.  reduce 61


state 66
	factor : ID '(' . ')'  (122)
	factor : ID '(' . call_params ')'  (123)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	')'  shift 108
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	call_params  goto 109
	expr  goto 110
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 67
	expr : ID '[' . expr ']' '=' expr  (102)
	array_subsc : ID '[' . expr ']'  (129)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 111
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 68
	expr : ID '=' . expr  (100)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 112
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 69
	factor : ID INC .  (114)

	.  reduce 114


state 70
	factor : ID DEC .  (115)

	.  reduce 115


state 71
	factor : DIGITAL_WRITE '(' . expr ',' HIGH_LOW ')'  (125)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 113
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 72
	factor : DELAY '(' . expr ')'  (126)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 114
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 73
	_expr : '(' type . ')' _expr  (112)

	')'  shift 115
	.  error


state 74
	expr : expr . '+' expr  (82)
	expr : expr . '-' expr  (83)
	expr : expr . '*' expr  (84)
	expr : expr . '/' expr  (85)
	expr : expr . '%' expr  (86)
	expr : expr . '<' expr  (87)
	expr : expr . '>' expr  (88)
	expr : expr . NLT expr  (89)
	expr : expr . NMT expr  (90)
	expr : expr . EQ expr  (91)
	expr : expr . NEQ expr  (92)
	expr : expr . AND expr  (93)
	expr : expr . OR expr  (94)
	expr : expr . '^' expr  (95)
	expr : expr . '&' expr  (96)
	expr : expr . '|' expr  (97)
	expr : expr . LS expr  (98)
	expr : expr . RS expr  (99)
	factor : '(' expr . ')'  (116)

	')'  shift 116
	OR  shift 86
	AND  shift 87
	'|'  shift 88
	'^'  shift 89
	'&'  shift 90
	EQ  shift 91
	NEQ  shift 92
	NLT  shift 93
	NMT  shift 94
	'<'  shift 95
	'>'  shift 96
	LS  shift 97
	RS  shift 98
	'+'  shift 99
	'-'  shift 100
	'*'  shift 101
	'/'  shift 102
	'%'  shift 103
	.  error


state 75
	factor : ID .  (113)
	factor : ID . INC  (114)
	factor : ID . DEC  (115)
	factor : ID . '(' ')'  (122)
	factor : ID . '(' call_params ')'  (123)
	array_subsc : ID . '[' expr ']'  (129)

	'('  shift 66
	'['  shift 117
	INC  shift 69
	DEC  shift 70
	','  reduce 113
	')'  reduce 113
	':'  reduce 113
	';'  reduce 113
	']'  reduce 113
	'='  reduce 113
	OR  reduce 113
	AND  reduce 113
	'|'  reduce 113
	'^'  reduce 113
	'&'  reduce 113
	EQ  reduce 113
	NEQ  reduce 113
	NLT  reduce 113
	NMT  reduce 113
	'<'  reduce 113
	'>'  reduce 113
	LS  reduce 113
	RS  reduce 113
	'+'  reduce 113
	'-'  reduce 113
	'*'  reduce 113
	'/'  reduce 113
	'%'  reduce 113


state 76
	_expr : '*' . _expr  (110)

	NUL  shift 40
	ID  shift 75
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 76
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	factor  goto 58
	_expr  goto 81
	array_subsc  goto 60


state 77
	_expr : '&' _expr .  (111)

	.  reduce 111


state 78
	_expr : '+' _expr .  (106)

	.  reduce 106


state 79
	_expr : '-' _expr .  (107)

	.  reduce 107


state 80
	expr : '*' factor . '=' expr  (101)
	_expr : factor .  (103)

	'='  shift 118
	','  reduce 103
	')'  reduce 103
	':'  reduce 103
	';'  reduce 103
	']'  reduce 103
	OR  reduce 103
	AND  reduce 103
	'|'  reduce 103
	'^'  reduce 103
	'&'  reduce 103
	EQ  reduce 103
	NEQ  reduce 103
	NLT  reduce 103
	NMT  reduce 103
	'<'  reduce 103
	'>'  reduce 103
	LS  reduce 103
	RS  reduce 103
	'+'  reduce 103
	'-'  reduce 103
	'*'  reduce 103
	'/'  reduce 103
	'%'  reduce 103


state 81
	_expr : '*' _expr .  (110)

	.  reduce 110


state 82
	_expr : INC _expr .  (104)

	.  reduce 104


state 83
	_expr : DEC _expr .  (105)

	.  reduce 105


state 84
	_expr : '!' _expr .  (108)

	.  reduce 108


state 85
	_expr : '~' _expr .  (109)

	.  reduce 109


state 86
	expr : expr OR . expr  (94)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 119
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 87
	expr : expr AND . expr  (93)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 120
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 88
	expr : expr '|' . expr  (97)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 121
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 89
	expr : expr '^' . expr  (95)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 122
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 90
	expr : expr '&' . expr  (96)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 123
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 91
	expr : expr EQ . expr  (91)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 124
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 92
	expr : expr NEQ . expr  (92)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 125
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 93
	expr : expr NLT . expr  (89)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 126
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 94
	expr : expr NMT . expr  (90)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 127
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 95
	expr : expr '<' . expr  (87)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 128
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 96
	expr : expr '>' . expr  (88)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 129
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 97
	expr : expr LS . expr  (98)

	NUL  shift 40
	ID  shift 41
	STRING  shift 42
	CHAR  shift 43
	DIGITAL_WRITE  shift 44
	DELAY  shift 45
	INT  shift 46
	FLOAT  shift 47
	'('  shift 48
	'&'  shift 49
	'+'  shift 50
	'-'  shift 51
	'*'  shift 52
	INC  shift 53
	DEC  shift 54
	'!'  shift 55
	'~'  shift 56
	.  error

	expr  goto 130
	factor  goto 58
	_expr  goto 59
	array_subsc  goto 60


state 98
	expr : expr RS . expr  (99)
